Feat: Lost 엔티티 외래키 연결 및 사용자 인증 추가